--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
-    <string name="app_name">Shopping</string>
+    <string name="all_discounts">All Discounts</string>
+    <string name="all_items">All Items</string>
+    <string name="clear_sale">Clear Sale</string>
+    <string name="subtotal">Subtotal</string>
+    <string name="discount">Discount</string>
+    <string name="cancel">Cancel</string>
+    <string name="save">Save</string>
+    <string name="quantity">Quantity</string>
+    <string name="app_name">CartSystem</string>
 </resources>
